--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "firebase": "^9.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
