--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.6.6",
+    "@craco/craco": "^6.2.0",
     "@emotion/memoize": "^0.7.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
